--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -69,4 +69,73 @@
     <string name="generalError">حدث خطأ ما يرجي المحاولة في وقت لاحق</string>
     <string name="myAccount">My Account</string>
     <string name="filter">Filter</string>
+    <string name="OperationFailed">Payment Operation Is Failed</string>
+    <string name="thanksMessage">Thanks For You Contact With Us, Your Message Is Sent,  We will Go Back To You  at the Earliest</string>
+    <string name="enterEmail">Enter Email Address</string>
+    <string name="enterSubject">Enter Subject</string>
+    <string name="enterMessage">Enter Message</string>
+    <string name="invalidEmail">Email Is Incorrect</string>
+    <string name="paymentHistory">Payment History</string>
+    <string name="changePackage">Change Package</string>
+    <string name="closedPrice">Closed Price:</string>
+    <string name="closedDate">Closed Date</string>
+    <string name="winnerBy">Winner by</string>
+    <string name="ended">ended</string>
+    <string name="live">live</string>
+    <string name="country">Country</string>
+    <string name="enterName">Enter Your Full Name</string>
+    <string name="enterMobile">Enter Your Mobile Number</string>
+    <string name="invalidMobile">Mobile Number Incorrect</string>
+    <string name="enterUserName">Enter YourUserName</string>
+    <string name="enterPassword">Enter Your Password</string>
+    <string name="invalidPass">Password Too Short</string>
+    <string name="mismatchPass">Mismatch Password</string>
+    <string name="civilId">CivilId</string>
+    <string name="emailAlreadyExist">Email Already Exists</string>
+    <string name="enterCivilId">Enter Your CivilId</string>
+    <string name="userNameAlreadyExist">userName Already Exists</string>
+    <string name="mobileAlreadyExist">Mobile Number Already Exist</string>
+    <string name="civilIdAlreadyExist">Civil Id Already Exist</string>
+    <string name="civilIdNotValid">Civil Id Incorrect or Invalid</string>
+    <string name="sessionTimeOut">"Session Time Out , Login Agin "</string>
+    <string name="invalidCivilId">Incorrect CivilId</string>
+    <string name="agreeForTerms">Agree For Terms And Conditions</string>
+    <string name="countryCode">Country Code</string>
+    <string name="selectCountryCode">Select Your County Code</string>
+    <string name="selectCivilIdImages">Select CivilId Images</string>
+    <string name="day">D</string>
+    <string name="kuwaitCurrency">KWD</string>
+    <string name="noNotification">لا يوجد إشعارات لعرضها</string>
+    <string name="fullName">FullName</string>
+    <string name="profileUpdated">Your Profile Updated Successfully</string>
+    <string name="wrongCurrentPassword">Current Password Is Wrong</string>
+    <string name="passwordChanged">Password Changed Successfully</string>
+    <string name="incorrectUserNameOrPass">Incorrect UserName OR Password</string>
+    <string name="addPackage">Add Package</string>
+    <string name="noPackagesFound">No Packages Found</string>
+    <string name="noHistoryFound">No Payment History Found</string>
+    <string name="subscribedSuccessfully">Your Subscription Done Successfully</string>
+    <string name="paid">You Paid</string>
+    <string name="subscribedOn">For Subscription on</string>
+    <string name="Package">Package</string>
+    <string name="bid">You bid on a</string>
+    <string name="and">And</string>
+    <string name="searchResult">Search Results</string>
+    <string name="wrongCode">"Wrong Verification Code  "</string>
+    <string name="accountCreated">"Your Account Created Successfully "</string>
+    <string name="fillCodeFields">Enter The Code First</string>
+    <string name="noEndedRequestsFound">No Ended Requests Founds</string>
+    <string name="noCurrentRequestsFound">No Current Requests Found</string>
+    <string name="me">Me</string>
+    <string name="brand">Brand</string>
+    <string name="checkAdOnApp">For Showing Ad Details Download (4Mazad App)</string>
+    <string name="iPhone">iPhone</string>
+    <string name="android">Android</string>
+    <string name="canNotBid">"you cant bid with this amount "</string>
+    <string name="paymentError">an Payment Error Occurred</string>
+    <string name="bidSuccessfully">Bidding process completed successfully</string>
+    <string name="canNotDecrement">Can\'t Decrement Less Than Minimum Value</string>
+    <string name="kuwaitCode">+965</string>
+    <string name="noAuction">No Auctions Founds</string>
+
 </resources>
